--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" type="imagem/png" href="/public/logo.ico" />
+    <link rel="shortcut icon" type="imagem/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,7 +13,6 @@
     <title>Site</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
